--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,12 @@
 .h-1{
   text-align: center;
 }
+footer{
+  position: fixed;
+  bottom: 0px;
+  height: 30px;
+  margin-top: auto;
+  width: 100%;
+  color: #fff;
+  background-color: #4076D2;
+}
