--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 
 .App {
   text-align: left;
+  background-image: linear-gradient(to bottom right, rgba(11, 19, 44, 0.801) , rgb(12, 12, 44));
+  color: white;
 }
 
 .App-logo {
@@ -58,4 +60,12 @@ footer{
   width: 100%;
   color: #fff;
   background-color: #4076D2;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .service-form {
+    width: 100%;
+    margin: 3rem auto;
+  }
 }
