removed body stylings

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 
 .App {
   text-align: left;
-  background-image: linear-gradient(to bottom right, rgb(17, 6, 58) , rgb(55, 42, 129));
-  color: white;
-  height: 100vh;
+  /* background-image: linear-gradient(to bottom right, rgb(17, 6, 58) , rgb(55, 42, 129)); */
+  /* color: white; */
+  /* height: 100vh; */
 }
 
 .App-logo {
