--- a/src/components/appointments/appointments.css
+++ b/src/components/appointments/appointments.css
@@ -4,4 +4,9 @@ h2, h2, h3, h4 {
 
 .appointment {
     height: 100vh;
+    width: 70%;
+    margin: 10px auto;
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 20px;
 }
