modified screen responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,10 @@ footer{
     margin: 3rem auto;
   }
 }
+
+@media only screen and (min-width: 600px) {
+  .service-form {
+    width: 100%;
+    margin: 3rem auto;
+  }
+}
